* Fixed obscode that was not exported in the AAVSO csv (#1577)
* Removed graxpert_deconv from the command line (#1575)
* Fixed SPCC failing to open files on Windows when the filepath contains non-ASCII characters (e.g., accented characters) (#1584)
* Fixed parameter parsing in PixelMath (#1594)
* Fixed bad font kerning on macOS (#1508)
* Fixed crash on Windows language change (#1560)

**Improvements:**
* Scripts can be opened in the editor directly from the Script Preferences treeview (#1556, !860)
* Added a fork of tkfilebrowser to support improved script UI file selection on Linux (!864)
* Implemented a better linear regression algorithm for SPCC (!853)
* Python scripts are now sorted alphabetically (#1559)
* Added an optional rate limit for smooth scroll zoom speed (#1576)
* Added SirilInterface.create_new_seq() and SirilInterface.is_cli() in sirilpy (!867)

siril 1.4.0-beta1
04/26/25

**New features:**
* Added support for unknown keywords with path parsing (#1333)
* Added support for JPEG XL image format
* Added comparison star list creation from Siril (!381)
* Added intensity profiling function (#5)
* Added internal plotting tool (siril_plot) to be used with profiling and light_curves (removed usage of GNUplot) (!543 !545)
* Added git script repository integration (!560)
* Added ROI processing for certain functions (!571, fixes #1098 and #1188)
* Added fully color managed workflow using ICC profiles (!542, fixes #1010, #1207)
* Added command conesearch (replaces nomad and solsys), including support for new catalogues (vsx, gcvs, exo, aavso_chart) (!579, #1171)
* Added AAVSO photometry file format output and improving photometry UI (#1234)
* Added color management to photometric color calibration, and SPCC as a new method. (!598)
* Added solving with distortions using SIP convention and handling writing related keywords in the header (!612 and #1154::3)
* Added full blindsolve with Astrometry.net (#1154::5 and !636)