@@ -35,15 +35,48 @@
 #include "core/command.h"
 #include "io/single_image.h"
 
-// Callbacks
-float denoise_modulation;
-int da3d = 0;
-int sos = 0;
-int sos_iters = 3;
-float sos_rho = 0.2f;
-gboolean do_anscombe = FALSE;
-gboolean do_cosme = TRUE;
-gboolean suppress_artefacts = FALSE;
+// Widgets
+GtkAdjustment *denoise_modulation_adjustment = NULL, *denoise_rho_adjustment = NULL, *denoise_sos_adjustment = NULL;
+GtkButton *denoise_cancel = NULL, *denoise_roi_preview = NULL, *denoise_apply = NULL;
+GtkDialog *denoise_dialog = NULL;
+GtkFrame *denoise_artefact_control = NULL, *sos_advanced_options = NULL;
+GtkRadioButton *radio_denoise_nosecondary = NULL, *radio_denoise_vst = NULL, *radio_denoise_da3d = NULL, *radio_denoise_sos = NULL;
+GtkScale *slide_denoise_modulation = NULL;
+GtkSpinButton *spin_sos_iters = NULL, *spin_rho = NULL, *spin_denoise_modulation = NULL;
+GtkToggleButton *check_denoise_cosmetic = NULL, *check_denoise_suppress_artefacts = NULL;
+
+// Statics init
+static void denoise_dialog_init_statics() {
+	if (denoise_modulation_adjustment == NULL) {
+		// GtkAdjustment
+		denoise_modulation_adjustment = GTK_ADJUSTMENT(gtk_builder_get_object(gui.builder, "denoise-modulation-adjustment"));
+		denoise_rho_adjustment = GTK_ADJUSTMENT(gtk_builder_get_object(gui.builder, "denoise-rho-adjustment"));
+		denoise_sos_adjustment = GTK_ADJUSTMENT(gtk_builder_get_object(gui.builder, "denoise_sos_adjustment"));
+		// GtkButton
+		denoise_cancel = GTK_BUTTON(gtk_builder_get_object(gui.builder, "denoise_cancel"));
+		denoise_roi_preview = GTK_BUTTON(gtk_builder_get_object(gui.builder, "denoise_roi_preview"));
+		denoise_apply = GTK_BUTTON(gtk_builder_get_object(gui.builder, "denoise_apply"));
+		// GtkDialog
+		denoise_dialog = GTK_DIALOG(gtk_builder_get_object(gui.builder, "denoise_dialog"));
+		// GtkFrame
+		denoise_artefact_control = GTK_FRAME(gtk_builder_get_object(gui.builder, "denoise_artefact_control"));
+		sos_advanced_options = GTK_FRAME(gtk_builder_get_object(gui.builder, "sos_advanced_options"));
+		// GtkRadioButton
+		radio_denoise_nosecondary = GTK_RADIO_BUTTON(gtk_builder_get_object(gui.builder, "radio_denoise_nosecondary"));
+		radio_denoise_vst = GTK_RADIO_BUTTON(gtk_builder_get_object(gui.builder, "radio_denoise_vst"));
+		radio_denoise_da3d = GTK_RADIO_BUTTON(gtk_builder_get_object(gui.builder, "radio_denoise_da3d"));
+		radio_denoise_sos = GTK_RADIO_BUTTON(gtk_builder_get_object(gui.builder, "radio_denoise_sos"));
+		// GtkScale
+		slide_denoise_modulation = GTK_SCALE(gtk_builder_get_object(gui.builder, "slide_denoise_modulation"));
+		// GtkSpinButton
+		spin_sos_iters = GTK_SPIN_BUTTON(gtk_builder_get_object(gui.builder, "spin_sos_iters"));
+		spin_rho = GTK_SPIN_BUTTON(gtk_builder_get_object(gui.builder, "spin_rho"));
+		spin_denoise_modulation = GTK_SPIN_BUTTON(gtk_builder_get_object(gui.builder, "spin_denoise_modulation"));
+		// GtkToggleButton
+		check_denoise_cosmetic = GTK_TOGGLE_BUTTON(gtk_builder_get_object(gui.builder, "check_denoise_cosmetic"));
+		check_denoise_suppress_artefacts = GTK_TOGGLE_BUTTON(gtk_builder_get_object(gui.builder, "check_denoise_suppress_artefacts"));
+	}
+}
 
 void denoise_roi_callback() {
 	gui.roi.operation_supports_roi = TRUE;
@@ -53,15 +86,13 @@ void denoise_roi_callback() {
 }
 
 void on_denoise_dialog_show(GtkWidget *widget, gpointer user_data) {
+	denoise_dialog_init_statics();
 	copy_gfit_to_backup();
 	roi_supported(TRUE);
 	denoise_roi_callback();
 	add_roi_callback(denoise_roi_callback);
-	da3d = 0;
-	GtkSpinButton *spin_denoise_modulation = GTK_SPIN_BUTTON(lookup_widget("spin_denoise_modulation"));
-	denoise_modulation = 1.f;
-	gtk_spin_button_set_value(spin_denoise_modulation, denoise_modulation);
-	gtk_widget_set_visible(GTK_WIDGET(lookup_widget("denoise_artefact_control")), (gfit.naxes[2] == 3));
+	gtk_spin_button_set_value(spin_denoise_modulation, 1.0);
+	gtk_widget_set_visible(GTK_WIDGET(denoise_artefact_control), (gfit.naxes[2] == 3));
 }
 
 void close_denoise() {
@@ -75,106 +106,47 @@ void on_denoise_cancel_clicked(GtkButton *button, gpointer user_data) {
 	close_denoise();
 }
 
-void on_spin_sos_iters_value_changed(GtkSpinButton *button, gpointer user_data) {
-	sos_iters = (float)gtk_spin_button_get_value(button);
-}
-void on_spin_rho_value_changed(GtkSpinButton *button, gpointer user_data) {
-	sos_rho = (float)gtk_spin_button_get_value(button);
-	if (sos_rho == 1.f) {
-		siril_log_message("Warning: rho = 1 will cause SOS to do nothing. Adjusting to 0.99...\n");
-		sos_rho = 0.99f;
-		gtk_spin_button_set_value(button, 0.99);
-	}
-	if (sos_rho == 0.f) {
-		siril_log_message("Warning: rho = 0 means SOS will never converge. Adjusting to 0.01...\n");
-		sos_rho = 0.01f;
-		gtk_spin_button_set_value(button, 0.01);
-	}
-}
-
-void on_spin_denoise_modulation_value_changed(GtkSpinButton *button, gpointer user_data) {
-	denoise_modulation = (float)gtk_spin_button_get_value(button);
-}
-
-void on_radio_denoise_nosecondary_toggled(GtkToggleButton *button, gpointer user_data) {
-	GtkToggleButton *toggle_da3d = GTK_TOGGLE_BUTTON(lookup_widget("radio_denoise_da3d"));
-	GtkToggleButton *toggle_vst = GTK_TOGGLE_BUTTON(lookup_widget("radio_denoise_vst"));
-	GtkToggleButton *toggle_sos = GTK_TOGGLE_BUTTON(lookup_widget("radio_denoise_sos"));
-	da3d = (gtk_toggle_button_get_active(toggle_da3d) ? 1 : 0);
-	do_anscombe = (gtk_toggle_button_get_active(toggle_vst) ? TRUE : FALSE);
-	sos = (gtk_toggle_button_get_active(toggle_sos) ? 1 : 0);
-	if (sos == 1)
-		gtk_widget_set_visible(GTK_WIDGET(lookup_widget("sos_advanced_options")), TRUE);
+void update_sos(GtkToggleButton *button, gpointer user_data) {
+	if (gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(radio_denoise_sos)))
+		gtk_widget_set_visible(GTK_WIDGET(sos_advanced_options), TRUE);
 	else
-		gtk_widget_set_visible(GTK_WIDGET(lookup_widget("sos_advanced_options")), FALSE);
-}
-
-void on_radio_denoise_da3d_toggled(GtkToggleButton *button, gpointer user_data) {
-	GtkToggleButton *toggle_vst = GTK_TOGGLE_BUTTON(lookup_widget("radio_denoise_vst"));
-	GtkToggleButton *toggle_sos = GTK_TOGGLE_BUTTON(lookup_widget("radio_denoise_sos"));
-	da3d = (gtk_toggle_button_get_active(button) ? 1 : 0);
-	do_anscombe = (gtk_toggle_button_get_active(toggle_vst) ? TRUE : FALSE);
-	sos = (gtk_toggle_button_get_active(toggle_sos) ? 1 : 0);
-	if (sos == 1)
-		gtk_widget_set_visible(GTK_WIDGET(lookup_widget("sos_advanced_options")), TRUE);
-	else
-		gtk_widget_set_visible(GTK_WIDGET(lookup_widget("sos_advanced_options")), FALSE);
-}
-
-void on_radio_denoise_sos_toggled(GtkToggleButton *button, gpointer user_data) {
-	GtkToggleButton *toggle_da3d = GTK_TOGGLE_BUTTON(lookup_widget("radio_denoise_da3d"));
-	GtkToggleButton *toggle_vst = GTK_TOGGLE_BUTTON(lookup_widget("radio_denoise_vst"));
-	sos = (gtk_toggle_button_get_active(button) ? 1 : 0);
-	do_anscombe = (gtk_toggle_button_get_active(toggle_vst) ? TRUE : FALSE);
-	da3d = (gtk_toggle_button_get_active(toggle_da3d) ? 1 : 0);
-	if (sos == 1)
-		gtk_widget_set_visible(GTK_WIDGET(lookup_widget("sos_advanced_options")), TRUE);
-	else
-		gtk_widget_set_visible(GTK_WIDGET(lookup_widget("sos_advanced_options")), FALSE);
-}
-
-void on_check_denoise_cosmetic_toggled(GtkToggleButton *button, gpointer user_data) {
-	do_cosme = (gtk_toggle_button_get_active(button) ? TRUE : FALSE);
-}
-
-void on_radio_denoise_vst_toggled(GtkToggleButton *button, gpointer user_data) {
-	GtkToggleButton *toggle_da3d = GTK_TOGGLE_BUTTON(lookup_widget("radio_denoise_da3d"));
-	GtkToggleButton *toggle_sos = GTK_TOGGLE_BUTTON(lookup_widget("radio_denoise_sos"));
-	do_anscombe = (gtk_toggle_button_get_active(button) ? TRUE : FALSE);
-	da3d = (gtk_toggle_button_get_active(toggle_da3d) ? 1 : 0);
-	sos = (gtk_toggle_button_get_active(toggle_sos) ? 1 : 0);
-	if (sos == 1)
-		gtk_widget_set_visible(GTK_WIDGET(lookup_widget("sos_advanced_options")), TRUE);
-	else
-		gtk_widget_set_visible(GTK_WIDGET(lookup_widget("sos_advanced_options")), FALSE);
+		gtk_widget_set_visible(GTK_WIDGET(sos_advanced_options), FALSE);
 }
 
 void on_denoise_apply_clicked(GtkButton *button, gpointer user_data) {
 	if (!check_ok_if_cfa())
 		return;
-	GtkSpinButton *spin_denoise_modulation = GTK_SPIN_BUTTON(lookup_widget("spin_denoise_modulation"));
-	denoise_modulation = (float)gtk_spin_button_get_value(spin_denoise_modulation);
-	gboolean suppress_artefacts = gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(lookup_widget("check_denoise_suppress_artefacts")));
 	if (gui.roi.active)
 		restore_roi();
 	denoise_args *args = calloc(1, sizeof(denoise_args));
-	args->modulation = denoise_modulation;
+	args->modulation = (float)gtk_spin_button_get_value(spin_denoise_modulation);
 	if (args->modulation == 0.f) {
 		siril_log_message(_("Modulation is zero: doing nothing.\n"));
 		free(args);
 		return;
 	}
 	control_window_switch_to_tab(OUTPUT_LOGS);
-	args->previewing = ((GtkWidget*) button == lookup_widget("denoise_roi_preview"));
+	args->previewing = (button == denoise_roi_preview);
 	siril_debug_print("Previewing: %d\n", args->previewing);
-	args->da3d = da3d;
-	args->sos = 1;
-	args->rho = sos_rho;
-	args->do_anscombe = do_anscombe;
-	args->do_cosme = do_cosme;
-	args->suppress_artefacts = suppress_artefacts;
-	if (sos == 1)
-		args->sos = sos_iters;
+	args->da3d = gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(radio_denoise_da3d));
+//	args->sos = 1;
+	args->sos = gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(radio_denoise_sos));
+	args->rho = gtk_spin_button_get_value(spin_rho);
+	if (args->rho == 1.f) {
+		siril_log_message("Warning: rho = 1 will cause SOS to do nothing. Adjusting to 0.99...\n");
+		args->rho = 0.99f;
+		gtk_spin_button_set_value(spin_rho, 0.99);
+	}
+	if (args->rho == 0.f) {
+		siril_log_message("Warning: rho = 0 means SOS will never converge. Adjusting to 0.01...\n");
+		args->rho = 0.01f;
+		gtk_spin_button_set_value(spin_rho, 0.01);
+	}
+	args->do_anscombe = gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(radio_denoise_vst));
+	args->do_cosme = gtk_toggle_button_get_active(check_denoise_cosmetic);
+	args->suppress_artefacts = gtk_toggle_button_get_active(check_denoise_suppress_artefacts);
+	if (args->sos)
+		args->sos = gtk_spin_button_get_value(spin_sos_iters);
 	args->fit = (gui.roi.active && args->previewing) ? &gui.roi.fit : &gfit;
 	if (!start_in_new_thread(run_nlbayes_on_fit, args)) {
 		free(args);
