@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.40.0
+<!-- Generated with glade 3.40.0 
 
 Copyright (C) The free-astro development team, 2019-2023
 
@@ -138,7 +138,6 @@ along with Siril.  If not, see <http://www.gnu.org/licenses/>.
                 <property name="halign">start</property>
                 <property name="active">True</property>
                 <property name="draw-indicator">True</property>
-                <signal name="toggled" handler="on_check_denoise_cosmetic_toggled" swapped="no"/>
               </object>
             </child>
             <child type="label">
@@ -215,7 +214,7 @@ along with Siril.  If not, see <http://www.gnu.org/licenses/>.
                     <property name="halign">start</property>
                     <property name="active">True</property>
                     <property name="draw-indicator">True</property>
-                    <signal name="toggled" handler="on_radio_denoise_nosecondary_toggled" swapped="no"/>
+                    <signal name="toggled" handler="update_sos" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -234,7 +233,7 @@ along with Siril.  If not, see <http://www.gnu.org/licenses/>.
                     <property name="active">True</property>
                     <property name="draw-indicator">True</property>
                     <property name="group">radio_denoise_nosecondary</property>
-                    <signal name="toggled" handler="on_radio_denoise_vst_toggled" swapped="no"/>
+                    <signal name="toggled" handler="update_sos" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -252,7 +251,7 @@ along with Siril.  If not, see <http://www.gnu.org/licenses/>.
                     <property name="halign">start</property>
                     <property name="draw-indicator">True</property>
                     <property name="group">radio_denoise_nosecondary</property>
-                    <signal name="toggled" handler="on_radio_denoise_da3d_toggled" swapped="no"/>
+                    <signal name="toggled" handler="update_sos" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -270,7 +269,7 @@ along with Siril.  If not, see <http://www.gnu.org/licenses/>.
                     <property name="halign">start</property>
                     <property name="draw-indicator">True</property>
                     <property name="group">radio_denoise_nosecondary</property>
-                    <signal name="toggled" handler="on_radio_denoise_sos_toggled" swapped="no"/>
+                    <signal name="toggled" handler="update_sos" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -333,7 +332,6 @@ along with Siril.  If not, see <http://www.gnu.org/licenses/>.
                     <property name="text">3</property>
                     <property name="adjustment">denoise_sos_adjustment</property>
                     <property name="value">3</property>
-                    <signal name="value-changed" handler="on_spin_sos_iters_value_changed" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">1</property>
@@ -363,7 +361,6 @@ along with Siril.  If not, see <http://www.gnu.org/licenses/>.
                     <property name="adjustment">denoise-rho-adjustment</property>
                     <property name="digits">2</property>
                     <property name="value">0.20</property>
-                    <signal name="value-changed" handler="on_spin_rho_value_changed" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">1</property>
@@ -421,7 +418,6 @@ along with Siril.  If not, see <http://www.gnu.org/licenses/>.
                 <property name="adjustment">denoise-modulation-adjustment</property>
                 <property name="digits">2</property>
                 <property name="value">1</property>
-                <signal name="value-changed" handler="on_spin_denoise_modulation_value_changed" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -456,5 +452,4 @@ along with Siril.  If not, see <http://www.gnu.org/licenses/>.
       </object>
     </child>
   </object>
-
 </interface>
